--- a/components/_catalog.scss
+++ b/components/_catalog.scss
@@ -1,7 +1,11 @@
 .catalog__item__service {
     display: flex;
     justify-content: space-around;
-
+    @include tablets{
+        flex-direction: column;    
+    align-items: center;
+}
+ 
 }
 
 .catalog__img-elem{
@@ -18,6 +22,13 @@ top: -18%;
 .catalog__content{
 width: rem(374px);
 height: rem(329px);
+@include tablets{
+    padding: 21px 55px;
+    width: auto;
+height: auto;
+}
+    
+
 }
 
 .catalog__desc{
@@ -27,7 +38,11 @@ height: rem(329px);
 .characteristic {
     justify-content: space-between;
     display: flex;
-    margin-bottom: rem(24px);
+    margin-bottom: rem(24px); 
+    @include tablets{
+        justify-content: space-around;
+        ;
+    }
 }
 
 .characteristic_option{
@@ -39,13 +54,21 @@ height: rem(329px);
     font-size: rem(36px);
     color: black;
     font-weight: bold;
-}
+    @include tablets{
+        text-align: center;
+    }
+}   
 
 .price_botton__price {
     display: flex;
     justify-content: space-between;
     height: rem(60px);
     width: rem(371px);
+    @include tablets{
+        width: auto;
+        justify-content: space-around;
+
+        }
 
 }
 
@@ -83,10 +106,23 @@ height: rem(329px);
     justify-content: space-between;
 
 }
-.slide_cp{  
+.slide__cp{  
     top: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     position: absolute;
     width: 100%;
+    @include tablets{
+        top: 25%;
+    }
+}
+
+.catalog-priсe {
+    @include tablets{
+        height: 135vh;
+    }
 }
