--- a/stayl/main.css
+++ b/stayl/main.css
@@ -703,6 +703,34 @@ img {
   padding: 2.7777777778rem 2.5rem 1.8888888889rem;
 }
 
+.reviews-switcher__item.active {
+  border: 6px solid aqua;
+  position: relative;
+  border-radius: 50%;
+}
+
+.reviews-switcher__item:hover {
+  border-color: aqua;
+}
+
+.reviews-switcher__item {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 6px solid transparent;
+  position: relative;
+}
+
+.reviews-switcher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .reviews__display-inner {
   display: -webkit-box;
   display: -ms-flexbox;
